2008-02-06  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  Some wine comments. Not sure if this is used at all.

2008-02-04  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* dllwrapper1/wine/pe_image.c:
	* dllwrapper1/wine/win32.c:
	  Our wine wrapper can resolve filenames incasesensitive. No more
	  symlinks needed! Yay.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineVirtualCallbacks.cpp:
	  Take this one too.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	  More build fixes.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	  More build fixes.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/MachineInterface.h:
	  Fix gcc warnings.

2007-12-03  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Only create CMachineInput if needed.

2007-11-21  Stefan Kost  <ensonic@users.sf.net>

	* src/Makefile.am:
	  Use local version to link against when building bmltest_* binaries.

2007-11-21  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Free the machine-iface causes a double free here. Disable for now.

2007-11-10  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* TODO:
	* configure.ac:
	* dllwrapper1/wine/Makefile.am:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/Makefile.am:
	* src/BuzzMachineLoader/debug.cpp:
	* src/BuzzMachineLoader/debug.h:
	* src/Makefile.am:
	* src/bml.c:
	* src/bmltest_info.c:
	* src/bmltest_process.c:
	  Check for CPU arch. Only build dll-wrapper part on x86. Automatically