@@ -1,3 +1,9 @@
+2008-02-07  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
+	* dllwrapper1/wine/win32.c:
+	  More crash info. Playing with CXX exception handler.
+
 2008-02-06  Stefan Kost  <ensonic@users.sf.net>
 
 	* README:
